--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MyApp",
+  "name": "myapp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -21,6 +21,8 @@
     "expo": "^46.0.0",
     "expo-clipboard": "~3.1.0",
     "expo-linear-gradient": "~11.4.0",
+    "expo-modules-core": "^0.11.7",
+    "expo-notifications": "~0.16.1",
     "react": "18.1.0",
     "react-native": "0.70.1",
     "react-native-calendars": "^1.1289.0",
@@ -29,7 +31,7 @@
     "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.17.0",
-    "react-native-svg": "^13.2.0",
+    "react-native-svg": "^12.1.0",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-swiper-flatlist": "^3.0.17"
   },
