--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-firebase/firestore": "^15.6.0",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
+    "@reduxjs/toolkit": "^1.8.6",
     "expo": "^46.0.0",
     "expo-clipboard": "~3.1.0",
     "expo-linear-gradient": "~11.4.0",
@@ -33,7 +34,9 @@
     "react-native-screens": "^3.17.0",
     "react-native-svg": "^12.1.0",
     "react-native-swipe-list-view": "^3.2.9",
-    "react-native-swiper-flatlist": "^3.0.17"
+    "react-native-swiper-flatlist": "^3.0.17",
+    "react-redux": "^8.0.4",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
